--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 HOST=0.0.0.0
 PORT=1337
+DATABASE_HOST=
+DATABASE_PORT=
+DATABASE_NAME=
+DATABASE_USERNAME=
+DATABASE_PASSWORD=
+FIREBASE_STORAGE_BUCKET_URL=
+FIREBASE_SERVICE_ACCOUNT_PATH=
