--- a/api/quotes/models/quotes.settings.json
+++ b/api/quotes/models/quotes.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "quotes",
   "info": {
-    "name": "Quotes"
+    "name": "Quotes",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -11,18 +12,17 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "text": {
-      "type": "string"
-    },
     "preview": {
       "model": "file",
       "via": "related",
-      "allowedTypes": [
-        "images"
-      ],
+      "allowedTypes": ["images"],
       "plugin": "upload",
       "required": true,
       "pluginOptions": {}
+    },
+    "text": {
+      "type": "string",
+      "required": true
     }
   }
 }
