update track model

--- a/api/track/models/track.settings.json
+++ b/api/track/models/track.settings.json
@@ -48,6 +48,26 @@
     "category": {
       "model": "category",
       "via": "tracks"
+    },
+    "audio_male": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "files"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
+    },
+    "audio_female": {
+      "model": "file",
+      "via": "related",
+      "allowedTypes": [
+        "files"
+      ],
+      "plugin": "upload",
+      "required": false,
+      "pluginOptions": {}
     }
   }
 }
